# task-reporter

./: .gitignore  Cargo.toml  README.md
bat/: task-reporter.bat
dotenv/: .env.sample
src/: env.rs  lib.rs  main.rs
src/adapter/: controller.rs  mod.rs
src/adapter/dto/: mod.rs  request.rs
src/adapter/dto/response/: by_task_and_total.rs  mod.rs
src/cui/: mod.rs  options.rs
src/domain/: mod.rs
src/domain/model/: as_vec.rs  date_range.rs  jst.rs  mod.rs  task_duration.rs  task_record.rs  task_records.rs
src/domain/model/aggregated_by/: charge_and_daily.rs  charge_and_total_period.rs  mod.rs  task_and_daily.rs  task_and_total_period.rs
src/domain/model/clickup/: clickup_task.rs  clickup_tasks.rs  clickup_time_entries.rs  clickup_time_entry.rs  mod.rs  values.rs
src/domain/repository/: clickup.rs  mod.rs
src/infra/: mod.rs
src/infra/repository_impl/: clickup.rs  mod.rs
src/infra/web/: basic_client.rs  basic_response.rs  mod.rs
src/infra/web/clickup/: clickup_api.rs  clickup_client.rs  clickup_params.rs  clickup_response.rs  mod.rs
src/infra/web/params/: api_params.rs  auth_type.rs  content_type.rs  http_methods.rs  mod.rs
src/logging/: filter.rs  filtered_layer.rs  layer.rs  mod.rs  writer.rs
src/usecase/: aggregate_duration.rs  mod.rs
