[package]
name = "task-reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.12", features = ["derive"]}
anyhow = "1.0.56"
async-trait = "0.1.53"
chrono = "0.4.24"
dotenv = "0.15.0"
regex = "1.7.3"
reqwest = {version="0.11.10", features = ["json"] }
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = {version = "0.3.11", features = ["time", "json"]}
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.4"
derive-new = "0.5.9"
